# PDFusion

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.DOCKER.md  README.md  build-sidecar.ps1  check_dependencies.py  docker-compose.yml  docker-entrypoint.py  docker-entrypoint.sh  install_dependencies.py  log.txt  main.py  pdfusion-sidecar.spec  pyproject.toml  refactor.md  requirements.txt  requirements_ai.txt  requirements_core.txt  requirements_rag.txt  requirements_scientific.txt  setup_api_keys.bat  setup_dev.bat  setup_rag.bat
.claude/: settings.local.json
config/: default_config.toml
desktop/: README.md  index.html  package.json  pnpm-lock.yaml
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  sidecar.rs
desktop/src/components/: AboutDialog.tsx  StartupScreen.tsx  theme-provider.tsx  theme-toggle.tsx
desktop/src/components/chat/: ActionLog.tsx  AssistantMessage.tsx  ChatInput.tsx  ChatPanel.tsx  ReferenceList.tsx  UserMessage.tsx
desktop/src/components/layout/: ContextBar.tsx  Header.tsx  MainLayout.tsx
desktop/src/components/pdf-viewer/: PdfViewer.tsx
desktop/src/components/settings/: SettingsSheet.tsx
desktop/src/components/translation/: ProgressOverlay.tsx
desktop/src/hooks/: useConfig.ts  useRagAsk.ts  useRagIndex.ts  useSidecar.ts  useTranslation.ts
desktop/src/lib/: api-client.ts  sse.ts  store.ts  tauri-ready.ts
docs/: ARCHITECTURE.md  INSTALLATION.md  RAG_README.md
resources/: README.md
scripts/: README.md  demo_rag.py  install_dependencies.bat
src/desktop_pdf_translator/: __init__.py
src/desktop_pdf_translator/agent/: __init__.py  agent.py  models.py  monitoring.py  prompts.py  tools.py
src/desktop_pdf_translator/agent/tools/: __init__.py
src/desktop_pdf_translator/api/: __init__.py  auth.py  jobs.py  schemas.py  server.py
src/desktop_pdf_translator/api/routes/: config.py  pdf.py  rag.py  translation.py
src/desktop_pdf_translator/config/: __init__.py  manager.py  models.py
src/desktop_pdf_translator/gui/: __init__.py  action_log_widget.py  animations.py  api_settings_dialog.py  chat_preferences.py  content_renderer.py  expandable_section.py  main_window.py  rag_chat_panel.py  widgets.py  worker.py
src/desktop_pdf_translator/processors/: __init__.py  events.py  exceptions.py  pdf_cache.py  processor.py
src/desktop_pdf_translator/rag/: __init__.py  academic_apis.py  agent_rag_chain.py  citation_graph.py  deep_search.py  document_processor.py  paper_cache.py  rag_chain.py  reference_manager.py  vector_store.py  web_research.py
src/desktop_pdf_translator/translators/: __init__.py  anthropic_translator.py  argos_translator.py  base.py  factory.py  gemini_translator.py  openai_translator.py  translation_cache.py
src/desktop_pdf_translator/utils/: __init__.py  encryption.py
tests/: __init__.py
unit_test/: document_processing_result.json  result.json  test_document_processing.py  test_rag.py
