[project]
name = "desktop-pdf-translator"
version = "1.0.0"
description = "Desktop PDF Translation Application with Vietnamese Support"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "babeldoc>=0.4.11,<0.5.0",
    "PyMuPDF>=1.23.6,<1.25.3",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "tomlkit>=0.12.0",
    "requests>=2.31.0",
    "chardet>=5.2.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[project.scripts]
pdf-translator = "desktop_pdf_translator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88