[project]
name = "pdfusion"
version = "1.0.0"
description = "Professional PDF Translation Application with AI-powered Q&A and Vietnamese optimization"
authors = [
    {name = "PDFusion Team", email = "contact@pdfusion.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["pdf", "translation", "vietnamese", "ai", "rag", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core dependencies - essential for basic functionality
dependencies = [
    # Core system
    "numpy>=2.0.2,<3.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    
    # Configuration and validation
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "tomlkit>=0.12.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # HTTP and network
    "requests>=2.31.0,<3.0.0",
    "chardet>=5.2.0,<6.0.0",
    "tenacity>=9.0.0,<10.0.0",
    
    # Scientific computing
    "pandas>=2.1.0,<3.0.0",
    
    # PDF processing
    "PyMuPDF>=1.25.1,<1.26.0",
    "Pillow>=9.5.0,<11.0.0",
    "babeldoc>=0.4.11,<0.5.0",
    
    # GUI framework
    "PySide6>=6.5.0,<6.8.0",
    
    # Translation services
    "openai>=1.3.0,<2.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    
    # UI and display
    "rich>=13.0.0,<14.0.0",
    "colorama>=0.4.6; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# RAG and advanced features
rag = [
    # Vector database and embeddings
    "chromadb>=0.4.15,<0.5.0",
    "sentence-transformers>=2.3.0,<3.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    
    # LangChain framework
    "langchain>=0.1.0,<0.3.0",
    "langchain-community>=0.0.10,<0.3.0",
    
    # Web research
    "aiohttp>=3.8.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "googlesearch-python>=1.2.3,<2.0.0",
    "scholarly>=1.7.0,<2.0.0",
    "arxiv>=2.0.0,<3.0.0",
    
    # Vietnamese NLP
    "underthesea>=6.8.0,<7.0.0",
    "spacy>=3.7.0,<4.0.0",
]

# Advanced PDF processing
advanced = [
    "camelot-py>=0.11.0,<1.0.0",
    "pdfplumber>=0.10.0,<1.0.0",
    "pdf2image>=1.16.0,<4.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "sympy>=1.12,<2.0.0",
]

# All optional features
all = [
    "pdfusion[rag,advanced]"
]

[project.scripts]
pdfusion = "desktop_pdf_translator.main:main"
pdf-translator = "desktop_pdf_translator.main:main"  # Legacy compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88