[package]
name = "desktop"
version = "0.1.0"
description = "PDFusion desktop"
authors = ["PDFusion"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Sidecar lifecycle
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
once_cell = "1"
log = "0.4"
env_logger = "0.11"
which = "6"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
